@@ -50,7 +50,7 @@ namespace eXeMeL
 
       this.AvalonEditor.PreviewKeyDown += AvalonEditor_PreviewKeyDown;
       this.AvalonEditor.TextArea.DocumentChanged += TextArea_DocumentChanged;
-      this.AvalonEditor.TextArea.TextView.LineTransformers.Add(new AllSelectionColorizer(this.AvalonEditor));
+      this.AvalonEditor.TextArea.TextView.LineTransformers.Add(new AllSelectionColorizer(this.AvalonEditor, this.ViewModel.Settings));
       this.AvalonEditor.TextArea.SelectionChanged += (sender, args) => this.AvalonEditor.TextArea.TextView.Redraw();
       this.AvalonEditor.TextArea.Caret.PositionChanged += AvalonEditor_CaretPositionChanged;
       this.AvalonEditor.TextChanged += AvalonEditor_TextChanged;
@@ -100,6 +100,8 @@ namespace eXeMeL
 
       this.ViewModel.Editor.RefreshComplete += Editor_RefreshComplete;
       this.ViewModel.Editor.PropertyChanging += Editor_PropertyChanging;
+
+      //this.SelectionColorizer.Settings = this.ViewModel.Settings;
 
       HandleChangedDocumentText(this.ViewModel.Editor.Document);
     }
@@ -226,7 +228,7 @@ namespace eXeMeL
 
 
 
-    private void MainWindow_Closing(object sender, System.ComponentModel.CancelEventArgs e)
+    private void MainWindow_Closing(object sender, CancelEventArgs e)
     {
       GalaSoft.MvvmLight.Messaging.Messenger.Default.Send<ApplicationClosingMessage>(new ApplicationClosingMessage());
     }
@@ -258,33 +260,41 @@ namespace eXeMeL
     }
 
 
-    private FoldingSection[] _foldSectionCache;
-    private List<FoldingSection>[] _foldingLevels;
+
+    private FoldingSection[] FoldSectionCache { get; set; }
+    private List<FoldingSection>[] FoldingLevels { get; set; }
+
+
+
     private void FoldSections(string level, bool fold)
     {
       if (string.IsNullOrEmpty(level) || level.Length > 1 || "1234567890-".IndexOf(level) < 0) return;
 
-      if (_foldSectionCache == null || _foldSectionCache.Any(f => !FoldingManager.AllFoldings.Contains(f)))
+      if (this.FoldSectionCache == null || this.FoldSectionCache.Any(f => !this.FoldingManager.AllFoldings.Contains(f)))
       {
-        _foldSectionCache = FoldingManager.AllFoldings.ToArray();
-        Stack<FoldingSection> stack = new Stack<FoldingSection>();
-        _foldingLevels = new List<FoldingSection>[10];
-        for (int i = 0; i < 10; i++) _foldingLevels[i] = new List<FoldingSection>();
+        this.FoldSectionCache = this.FoldingManager.AllFoldings.ToArray();
+        this.FoldingLevels = new List<FoldingSection>[10];
+
+        for (var i = 0; i < 10; i++)
+          this.FoldingLevels[i] = new List<FoldingSection>();
 
         // rebuild
-        foreach (var foldSection in FoldingManager.AllFoldings)
+        var stack = new Stack<FoldingSection>();
+        foreach (var foldSection in this.FoldingManager.AllFoldings)
         {
           if (stack.Any())
             while (foldSection.StartOffset > stack.Peek().EndOffset) stack.Pop();
           if (stack.Count < 10)
-            _foldingLevels[stack.Count].Add(foldSection);
+            this.FoldingLevels[stack.Count].Add(foldSection);
           stack.Push(foldSection);
         }
       }
 
-      var itemsToFold = level != "-" ? _foldingLevels[level[0] - '0'] : FoldingManager.AllFoldings.ToList();
+      var itemsToFold = level != "-" ? this.FoldingLevels[level[0] - '0'] : this.FoldingManager.AllFoldings.ToList();
       itemsToFold.ForEach(f => f.IsFolded = fold);
     }
+
+
 
     private void HandleApplicationThemeUpdatedMessage(ApplicationThemeUpdatedMessage message)
     {
@@ -295,7 +305,7 @@ namespace eXeMeL
 
     private void SetWindowGlow()
     {
-      this.GlowBrush.Color = (Color)this.FindResource("WindowGlowColor");
+      this.GlowBrush.Color = (Color)FindResource("WindowGlowColor");
     }
 
 
