@@ -9,6 +9,7 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
   mc:Ignorable="d" 
   d:DesignHeight="300" d:DesignWidth="300"
+  d:DataContext="{d:DesignInstance model:Settings}"
   Width="350"
   Name="ControlRoot">
 
@@ -26,6 +27,7 @@
   <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" Padding="5,0">
     <Grid>
       <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
@@ -119,16 +121,32 @@
         Height="30"
         Margin="0,10,0,0"/>
 
+      <TextBlock
+        Grid.Row="6" Grid.Column="0"
+        Text="Highlight all intances of selected text" 
+        Style="{StaticResource SettingGroupHeaderStyle}"
+        TextWrapping="Wrap"
+        Margin="0,10,0,0"
+        />
+      
+      <CheckBox
+        Grid.Row="6" Grid.Column="2"
+        IsChecked="{Binding HighlightOtherInstancesOfSelection}"
+        Height="30" Width="30"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Center"
+        Margin="0,10,0,0"
+        />
 
 
       <TextBlock 
-        Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" 
+        Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" 
         Text="{Binding CurrentVersion, ElementName=ControlRoot, StringFormat='Current Version: {0}'}" 
         Style="{StaticResource SettingGroupHeaderStyle}"
         Margin="0,40,0,0"
         />
 
-      <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,40,0,0" Style="{StaticResource SettingGroupHeaderStyle}">
+      <TextBlock Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,40,0,0" Style="{StaticResource SettingGroupHeaderStyle}">
         <Run Text="Makes use of "/>
         <LineBreak/>
         <Run Text="  AvalonEdit"/>
